contact section styling

--- a/index.html
+++ b/index.html
@@ -362,8 +362,8 @@
       </h1>
 
       <div class='info-div col-sm-12'>
-        <p><span class='name'>Evan Doherty</span> | Software Engineer</p>
-        <p>Email: evan.doherty.ny@gmail.com</p>
+        <p class='info'>Evan Doherty | Software Engineer</p>
+        <p class='info'>Email: evan.doherty.ny@gmail.com</p>
         <div class='icon-div d-flex flex-row'>
           <p><a href='https://www.linkedin.com/in/evan-doherty-0310a544/'><i
                 class="fab fa-linkedin-in prof-icon"></i></a></p>
@@ -373,15 +373,15 @@
 
 
 
-      <div class='contact-div col-sm-12'>
+      <div class='contact-div col-sm-12 d-flex flex-column'>
         <form id="contact-form">
-          <input type="hidden" name="contact_number"> <br>
+          <input type="hidden" name="contact_number">
           <!-- <label>Name</label> -->
-          <input type="text" name="user_name" placeholder="Name"> <br>
+          <input type="text" name="user_name" placeholder="Name">
           <!-- <label>Email</label> -->
-          <input type="email" name="user_email" placeholder="Email"> <br>
+          <input type="email" name="user_email" placeholder="Email">
           <!-- <label>Message</label> -->
-          <textarea name="message" placeholder="Message"></textarea> <br>
+          <textarea name="message" placeholder="Message"></textarea>
           <input type="submit" value="Send">
         </form>
       </div>
