styled contact section

--- a/index.html
+++ b/index.html
@@ -357,31 +357,31 @@
     <!-- ////////////////////////////////CONTACT////////////////////////////////// -->
 
     <footer class='row' id='contact-row'>
-      <h1 class='col-12 fade-in section-header'>
+      <h1 class='col-12 fade-in contact section-header'>
         Contact
       </h1>
 
-      <div class='info-div col-sm-12'>
+      <div class='info-div fade-in col-sm-12 col-md-6'>
         <p class='info'>Evan Doherty | Software Engineer</p>
         <p class='info'>Email: evan.doherty.ny@gmail.com</p>
         <div class='icon-div d-flex flex-row'>
-          <p><a href='https://www.linkedin.com/in/evan-doherty-0310a544/'><i
-                class="fab fa-linkedin-in prof-icon"></i></a></p>
-          <p><a href='https://github.com/edoherty77'><i class="fab fa-github prof-icon"></i></a></p>
+          <p><a target="_blank" href='https://www.linkedin.com/in/evan-doherty-0310a544/'><i
+                class=" fab fa-linkedin-in prof-icon"></i></a></p>
+          <p><a target="_blank" href='https://github.com/edoherty77'><i class=" fab fa-github prof-icon"></i></a></p>
         </div>
       </div>
 
 
 
-      <div class='contact-div col-sm-12 d-flex flex-column'>
+      <div class='contact-div col-sm-12 col-md-6 fade-in d-flex flex-column'>
         <form id="contact-form">
-          <input type="hidden" name="contact_number">
+          <input type="hidden" name="contact_number"> <br>
           <!-- <label>Name</label> -->
-          <input type="text" name="user_name" placeholder="Name">
+          <input type="text" name="user_name" placeholder="Name"> <br>
           <!-- <label>Email</label> -->
-          <input type="email" name="user_email" placeholder="Email">
+          <input type="email" name="user_email" placeholder="Email"> <br>
           <!-- <label>Message</label> -->
-          <textarea name="message" placeholder="Message"></textarea>
+          <textarea name="message" placeholder="Message"></textarea> <br>
           <input type="submit" value="Send">
         </form>
       </div>
