--- a/index.html
+++ b/index.html
@@ -363,7 +363,7 @@
 
       <div class='info-div fade-in col-sm-12 col-md-6'>
         <p class='info'>Evan Doherty | Software Engineer</p>
-        <p class='info'>Email: evan.doherty.ny@gmail.com</p>
+        <p class='info'>evan.doherty.ny@gmail.com</p>
         <div class='icon-div d-flex flex-row'>
           <p><a target="_blank" href='https://www.linkedin.com/in/evan-doherty-0310a544/'><i
                 class=" fab fa-linkedin-in prof-icon"></i></a></p>
