--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
   <script src="https://use.fontawesome.com/d6edd70b37.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/emailjs-com@2/dist/email.min.js"></script>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
   <script type="text/javascript">
     (function () {
       // https://dashboard.emailjs.com/admin/integration
@@ -83,45 +86,153 @@
       <div class='row projects'>
 
 
-        <div class='col-xs-12 col-sm-12 card-container fade-in col-md-12 col-lg-6 mb-3'>
+        <div class='col-xs-12 col-sm-12 card-container fade-in col-md-12 col-lg-12 mb-3'>
           <div class='card project-card'>
+            <h1 class='card-title'>Travel Book</h1>
             <div class='img-container'>
-              <img class='card-img-top' id='p4-img' src="assets/tb_2.PNG" alt="travel-book">
-              <!-- <a href="projects/tb.html"></a> -->
-            </div>
-            <div class='card-body'>
-              <h1 class='card-title'>Travel Book</h1>
-              <p class='card-text'>iOS app for logging every detail of your trip.</p>
-              <div class='d-flex flex-row flex-wrap tags'>
-                <button>MongoDB</button>
-                <button class='express'>Express</button>
-                <button>React-Native</button>
-                <button>Node.JS</button>
-                <button>Expo</button>
-                <button>Google Authentication</button>
-                <button>Google Places</button>
-                <button>Google Maps</button>
+              <!-- <a href="projects/tb.html">
+                <img class='card-img-top' id='p4-img' src="assets/tb_2.PNG" alt="travel-book">
+
+              </a>
+            </div> -->
+              <div id="tbCarousel" class="carousel slide" data-ride="carousel">
+                <!-- Indicators -->
+                <ol class="carousel-indicators">
+                  <li data-target="#tbCarousel" data-slide-to="0" class="active"></li>
+                  <li data-target="#tbCarousel" data-slide-to="1"></li>
+                  <li data-target="#tbCarousel" data-slide-to="2"></li>
+                </ol>
+
+                <!-- Wrapper for slides -->
+                <div class="carousel-inner">
+                  <div class="item active">
+                    <img src="assets/tb_6.png" alt="Los Angeles" style="width:100%;">
+                  </div>
+                  <div class="item">
+                    <img src="assets/tb.png" alt="Chicago" style="width:100%;">
+                  </div>
+                  <div class="item">
+                    <img src="assets/tb_2.png" alt="Chicago" style="width:100%;">
+                  </div>
+                  <div class="item">
+                    <img src="assets/tb_3.png" alt="New york" style="width:100%;">
+                  </div>
+                  <div class="item">
+                    <img src="assets/tb_4.png" alt="New york" style="width:100%;">
+                  </div>
+
+                </div>
+
+                <!-- Left and right controls -->
+                <a class="left carousel-control" href="#tbCarousel" data-slide="prev">
+                  <span class="glyphicon glyphicon-chevron-left"></span>
+                  <span class="sr-only">Previous</span>
+                </a>
+                <a class="right carousel-control" href="#tbCarousel" data-slide="next">
+                  <span class="glyphicon glyphicon-chevron-right"></span>
+                  <span class="sr-only">Next</span>
+                </a>
+              </div>
+              <div class='card-body'>
+
+                <!-- <p class='card-text'>iOS app for logging every detail of your trip.</p> -->
+                <p class='card-text'>With Travel Book, users can easily keep track of the places they have visted, the
+                  photos they
+                  have taken, and
+                  even the
+                  miles they have travled. With the help of Google Maps and Places, and implementing MongoDB, Express,
+                  React
+                  Native, and Node,
+                  users can not only check-in to their current location with just the touch of a button, but also add
+                  photos.
+                  And since everything
+                  for that cool trip you went on is in one place, it's easier to brag to your friends.</p>
+                <div class='d-flex flex-row flex-wrap tags'>
+                  <button>MongoDB</button>
+                  <button class='express'>Express</button>
+                  <button>React-Native</button>
+                  <button>Node.JS</button>
+                  <button>Expo</button>
+                  <button>Google Authentication</button>
+                  <button>Google Places</button>
+                  <button>Google Maps</button>
+                </div>
               </div>
             </div>
           </div>
         </div>
 
-        <div class='col-xs-12 col-sm-12 card-container fade-in col-md-12 col-lg-6 mb-3'>
+
+
+        <div class='col-xs-12 col-sm-12 card-container fade-in col-md-12 col-lg-12 mb-3'>
           <div class='card project-card'>
+            <h1 class='card-title'>Vote-ify</h1>
             <div class='img-container'>
-              <img class='card-img-top' id='p3-img' src="assets/vote.png" alt="vote-ify">
-              <!-- <a href="projects/vote.html"></a> -->
-            </div>
-            <div class='card-body'>
-              <h1 class='card-title'>Vote-ify</h1>
-              <p class='card-text'>Listen, search, and vote using Spotify's API.</p>
-              <div class='d-flex flex-row flex-wrap tags'>
-                <button>MongoDB</button>
-                <button class='express'>Express</button>
-                <button>ReactJS</button>
-                <button>Node.JS</button>
-                <button>Ant Design</button>
-                <button>Spotify Authentication</button>
+              <!-- <a href="projects/vote.html">
+                <img class='card-img-top' id='p3-img' src="assets/vote.png" alt="vote-ify">
+
+              </a>
+            </div> -->
+
+              <div id="voteCarousel" class="carousel slide" data-ride="carousel">
+                <!-- Indicators -->
+                <ol class="carousel-indicators">
+                  <li data-target="#voteCarousel" data-slide-to="0" class="active"></li>
+                  <li data-target="#voteCarousel" data-slide-to="1"></li>
+                  <li data-target="#voteCarousel" data-slide-to="2"></li>
+                </ol>
+
+                <!-- Wrapper for slides -->
+                <div class="carousel-inner">
+                  <div class="item active">
+                    <img src="assets/vote.png" alt="Los Angeles" style="width:100%;">
+                  </div>
+                  <div class="item">
+                    <img src="assets/vote_2.png" alt="Chicago" style="width:100%;">
+                  </div>
+                  <div class="item">
+                    <img src="assets/vote_4.png" alt="New york" style="width:100%;">
+                  </div>
+                  <div class="item">
+                    <img src="assets/vote_5.png" alt="New york" style="width:100%;">
+                  </div>
+                  <div class="item">
+                    <img src="assets/vote_6.png" alt="New york" style="width:100%;">
+                  </div>
+                </div>
+
+                <!-- Left and right controls -->
+                <a class="left carousel-control" href="#voteCarousel" data-slide="prev">
+                  <span class="glyphicon glyphicon-chevron-left"></span>
+                  <span class="sr-only">Previous</span>
+                </a>
+                <a class="right carousel-control" href="#voteCarousel" data-slide="next">
+                  <span class="glyphicon glyphicon-chevron-right"></span>
+                  <span class="sr-only">Next</span>
+                </a>
+              </div>
+              <div class='card-body'>
+
+                <!-- <p class='card-text'>Listen, search, and vote using Spotify's API.</p> -->
+                <p class='card-text'>Vote-ify brings Democracy to playlists. Using the Spotify API, users can listen to
+                  and contribute
+                  songs to 12
+                  playlists,
+                  all curated and managed by the community. Carefully creating a Spotify API endpoint, I implemented a
+                  search
+                  bar,
+                  where a user can search and 'suggest' a song. It is then sent into a queue where it has two weeks to
+                  earn
+                  enough votes to be
+                  officially added to the playlist.</p>
+                <div class='d-flex flex-row flex-wrap tags'>
+                  <button>MongoDB</button>
+                  <button class='express'>Express</button>
+                  <button>ReactJS</button>
+                  <button>Node.JS</button>
+                  <button>Ant Design</button>
+                  <button>Spotify Authentication</button>
+                </div>
               </div>
             </div>
           </div>
@@ -130,41 +241,137 @@
 
 
 
-        <div class='col-xs-12 col-sm-12 card-container fade-in col-md-12 col-lg-6 mb-3'>
+        <div class='col-xs-12 col-sm-12 card-container fade-in col-md-12 col-lg-12 mb-3'>
           <div class='card project-card'>
+            <h1 class='card-title'>Sudoku</h1>
             <div class='img-container'>
               <!-- <a href="projects/sudoku.html">
 
-              </a> -->
-              <img class='card-img-top' id='p1-img' src="assets/sudoku.png" alt="sudoku">
-            </div>
-            <div class='card-body'>
-              <h1 class='card-title'>Sudoku</h1>
-              <p class='card-text'>Classic sudoku with up to 4 difficulties.</p>
-              <div class='d-flex flex-row tags'>
-                <button>Javascript</button>
-                <button>HTML</button>
-                <button>CSS</button>
-                <button>Bootstrap</button>
+                <img class='card-img-top' id='p1-img' src="assets/sudoku.png" alt="sudoku">
+              </a>
+              </div>  -->
+
+
+
+              <div id="sudokuCarousel" class="carousel slide" data-ride="carousel">
+                <!-- Indicators -->
+                <ol class="carousel-indicators">
+                  <li data-target="#sudokuCarousel" data-slide-to="0" class="active"></li>
+                  <li data-target="#sudokuCarousel" data-slide-to="1"></li>
+                  <li data-target="#sudokuCarousel" data-slide-to="2"></li>
+                </ol>
+
+                <!-- Wrapper for slides -->
+                <div class="carousel-inner">
+                  <div class="item active">
+                    <img class='p-pic' src="assets/sudoku.png" alt="Los Angeles" style="width:100%;">
+                  </div>
+                  <div class="item">
+                    <img src="assets/sudoku_2.png" alt="Chicago" style="width:100%;">
+                  </div>
+                  <div class="item">
+                    <img src="assets/sudoku_3.png" alt="New york" style="width:100%;">
+                  </div>
+
+                </div>
+
+                <!-- Left and right controls -->
+                <a class="left carousel-control" href="#sudokuCarousel" data-slide="prev">
+                  <span class="glyphicon glyphicon-chevron-left"></span>
+                  <span class="sr-only">Previous</span>
+                </a>
+                <a class="right carousel-control" href="#sudokuCarousel" data-slide="next">
+                  <span class="glyphicon glyphicon-chevron-right"></span>
+                  <span class="sr-only">Next</span>
+                </a>
+              </div>
+              <div class='card-body'>
+
+                <p class='card-text'>Classic sudoku with up to 4 difficulties and multiple functionalities such as
+                  hints, undo, and pause.</p>
+
+                <div class='d-flex flex-row tags'>
+                  <button>Javascript</button>
+                  <button>HTML</button>
+                  <button>CSS</button>
+                  <button>Bootstrap</button>
+                </div>
               </div>
             </div>
           </div>
         </div>
 
-        <div class='col-xs-12 col-sm-12 card-container fade-in col-md-12 col-lg-6 mb-3'>
+        <div class='col-xs-12 col-sm-12 card-container fade-in col-md-12 col-lg-12 mb-3'>
           <div class='card project-card'>
+            <h1 class='card-title'>Let's Chat</h1>
             <div class='img-container'>
-              <img class='card-img-top' id='p2-img' src="assets/chat.png" alt="lets-chat">
-              <!-- <a href="projects/chat.html"></a> -->
-            </div>
-            <div class='card-body'>
-              <h1 class='card-title'>Let's Chat</h1>
-              <p class='card-text'>Education-based chat app.</p>
-              <div class='d-flex flex-row tags'>
-                <button id='test'>MongoDB</button>
-                <button class='express'>Express</button>
-                <button>Node.JS</button>
-                <button>Facebook Authentication</button>
+              <!-- <a href="projects/chat.html">
+
+                <img class='card-img-top' id='p2-img' src="assets/chat.png" alt="lets-chat">
+              </a>
+            </div> -->
+
+              <div id="chatCarousel" class="carousel slide" data-ride="carousel">
+                <!-- Indicators -->
+                <ol class="carousel-indicators">
+                  <li data-target="#chatCarousel" data-slide-to="0" class="active"></li>
+                  <li data-target="#chatCarousel" data-slide-to="1"></li>
+                  <li data-target="#chatCarousel" data-slide-to="2"></li>
+                </ol>
+
+                <!-- Wrapper for slides -->
+                <div class="carousel-inner">
+                  <div class="item active">
+                    <img src="assets/chat.png" alt="Los Angeles" style="width:100%;">
+                  </div>
+
+                  <div class="item">
+                    <img src="assets/chat_2.png" alt="Chicago" style="width:100%;">
+                  </div>
+
+                  <div class="item">
+                    <img src="assets/chat_3.png" alt="New york" style="width:100%;">
+                  </div>
+                  <div class="item">
+                    <img src="assets/chat_4.png" alt="New york" style="width:100%;">
+                  </div>
+                  <div class="item">
+                    <img src="assets/chat_5.png" alt="New york" style="width:100%;">
+                  </div>
+                </div>
+
+                <!-- Left and right controls -->
+                <a class="left carousel-control" href="#chatCarousel" data-slide="prev">
+                  <span class="glyphicon glyphicon-chevron-left"></span>
+                  <span class="sr-only">Previous</span>
+                </a>
+                <a class="right carousel-control" href="#chatCarousel" data-slide="next">
+                  <span class="glyphicon glyphicon-chevron-right"></span>
+                  <span class="sr-only">Next</span>
+                </a>
+              </div>
+              <div class='card-body'>
+
+                <!-- <p class='card-text'>Education-based chat app.</p> -->
+                <p class='card-text'>As a GA student, I frequently used Slack as a means of communication and education.
+                  Our main
+                  channel was
+                  populated with useful
+                  information, but since it was so active, finding the information you needed became difficult, even
+                  with
+                  Slack's search feature.
+                  Let's Chat was created to alleviate this issue by requiring users to select a tag relevant to the
+                  topic
+                  they are posting. Using Express and MongoDB, I implemented a search feature where users can sort posts
+                  by
+                  selecting
+                  their desired tag.</p>
+                <div class='d-flex flex-row tags'>
+                  <button id='test'>MongoDB</button>
+                  <button class='express'>Express</button>
+                  <button>Node.JS</button>
+                  <button>Facebook Authentication</button>
+                </div>
               </div>
             </div>
           </div>
