--- a/projects/chat.html
+++ b/projects/chat.html
@@ -12,10 +12,15 @@
   <script src='https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js'></script>
   <script src="https://use.fontawesome.com/d6edd70b37.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
   <title>Let's Chat</title>
 </head>
 
-<body>
+<body class='test'>
   <div class="d-flex flex-row p-header">
     <div class="logo-div">
       <a href="../index.html"><img class='p-logo' src="../assets/logo.JPG" alt="logo"></a>
@@ -23,40 +28,76 @@
     <h1 class='p-name'>Let's Chat</h1>
   </div>
 
-  <div class='row p-container '>
-    <div class='col-12 p-top'>
-      <ul class='slideshow chat'>
-        <li></li>
-        <li></li>
-        <li></li>
+
+  <div class="container">
+
+    <div id="myCarousel" class="carousel slide" data-ride="carousel">
+      <!-- Indicators -->
+      <ol class="carousel-indicators">
+        <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+        <li data-target="#myCarousel" data-slide-to="1"></li>
+        <li data-target="#myCarousel" data-slide-to="2"></li>
+      </ol>
+
+      <!-- Wrapper for slides -->
+      <div class="carousel-inner">
+        <div class="item active">
+          <img src="../assets/chat.png" alt="Los Angeles" style="width:100%;">
+        </div>
+
+        <div class="item">
+          <img src="../assets/chat_2.png" alt="Chicago" style="width:100%;">
+        </div>
+
+        <div class="item">
+          <img src="../assets/chat_3.png" alt="New york" style="width:100%;">
+        </div>
+        <div class="item">
+          <img src="../assets/chat_4.png" alt="New york" style="width:100%;">
+        </div>
+        <div class="item">
+          <img src="../assets/chat_5.png" alt="New york" style="width:100%;">
+        </div>
+      </div>
+
+      <!-- Left and right controls -->
+      <a class="left carousel-control" href="#myCarousel" data-slide="prev">
+        <span class="glyphicon glyphicon-chevron-left"></span>
+        <span class="sr-only">Previous</span>
+      </a>
+      <a class="right carousel-control" href="#myCarousel" data-slide="next">
+        <span class="glyphicon glyphicon-chevron-right"></span>
+        <span class="sr-only">Next</span>
+      </a>
+    </div>
+  </div>
+
+
+  <div class='col-12 p-bottom' id='bottom'>
+    <div class='icon-container'>
+      <ul class="icon-list d-flex flex-row">
+        <li><img class='icon-img' src="../assets/mongodb.png" alt="mongodb"></li>
+        <li><img class='icon-img' src="../assets/express.jpg" alt="express"></li>
+        <li><img class='icon-img' src="../assets/nodejs.png" alt="nodejs"></li>
+        <li><img class='icon-img' src="../assets/facebook.png" alt="facebook"></li>
       </ul>
     </div>
-
-
-    <div class='col-12 p-bottom'>
-      <div class='icon-container'>
-        <ul class="icon-list d-flex flex-row">
-          <li><img class='icon-img' src="../assets/mongodb.png" alt="mongodb"></li>
-          <li><img class='icon-img' src="../assets/express.jpg" alt="express"></li>
-          <li><img class='icon-img' src="../assets/nodejs.png" alt="nodejs"></li>
-          <li><img class='icon-img' src="../assets/facebook.png" alt="facebook"></li>
-        </ul>
-      </div>
-      <div class='description-container'>
-        <p class='mb-0'>
-          Lorem Ipsum is simply dummy text of the printing and
-          typesetting industry. Lorem Ipsum has been the industry's
-          standard dummy text ever since the 1500s, when an unknown
-          printer took a galley of type and scrambled it to make a
-          type specimen book. It has survived not only five centuries,
-          but also the leap into electronic typesetting, remaining
-          essentially unchanged.
-        </p>
-      </div>
+    <div class='description-container'>
+      <p class='mb-0'> As a GA student, I frequently used Slack as a means of communication and education. Our main
+        channel was
+        populated with useful
+        information, but since it was so active, finding the information you needed became difficult, even with
+        Slack's search feature.
+        Let's Chat was created to alleviate this issue by requiring users to select a tag relevant to the topic
+        they are posting. Using Express and MongoDB, I implemented a search feature where users can sort posts by
+        selecting
+        their desired tag.</p>
 
     </div>
 
   </div>
+
+  <!-- </div> -->
 
   <!-- <button class='p-btn'><a href="">link to code</a></button> -->
 
