--- a/projects/sudoku.html
+++ b/projects/sudoku.html
@@ -12,63 +12,96 @@
   <script src='https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js'></script>
   <script src="https://use.fontawesome.com/d6edd70b37.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-  <title>Let's Chat</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+  <title>Evan's Sudoku</title>
 </head>
 
-<body>
+<body class='test'>
   <div class="d-flex flex-row p-header">
     <div class="logo-div">
       <a href="../index.html"><img class='p-logo' src="../assets/logo.JPG" alt="logo"></a>
     </div>
-    <h1 class='p-name'>Sudoku</h1>
+    <h1 class='p-name'>Evan's Sudoku</h1>
   </div>
 
-  <div class='row p-container '>
-    <div class='col-12 p-top'>
-      <ul class='slideshow sudoku'>
-        <li></li>
-        <li></li>
-        <li></li>
+
+  <div class="container">
+    <div id="myCarousel" class="carousel slide" data-ride="carousel">
+      <!-- Indicators -->
+      <ol class="carousel-indicators">
+        <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+        <li data-target="#myCarousel" data-slide-to="1"></li>
+        <li data-target="#myCarousel" data-slide-to="2"></li>
+      </ol>
+
+      <!-- Wrapper for slides -->
+      <div class="carousel-inner">
+        <div class="item active">
+          <img src="../assets/sudoku.png" alt="Los Angeles" style="width:100%;">
+        </div>
+
+        <div class="item">
+          <img src="../assets/sudoku_2.png" alt="Chicago" style="width:100%;">
+        </div>
+
+        <div class="item">
+          <img src="../assets/sudoku_3.png" alt="New york" style="width:100%;">
+        </div>
+      </div>
+
+      <!-- Left and right controls -->
+      <a class="left carousel-control" href="#myCarousel" data-slide="prev">
+        <span class="glyphicon glyphicon-chevron-left"></span>
+        <span class="sr-only">Previous</span>
+      </a>
+      <a class="right carousel-control" href="#myCarousel" data-slide="next">
+        <span class="glyphicon glyphicon-chevron-right"></span>
+        <span class="sr-only">Next</span>
+      </a>
+    </div>
+  </div>
+
+
+  <div class='col-12 p-bottom' id='bottom'>
+    <div class='icon-container'>
+      <ul class="icon-list d-flex flex-row">
+        <li><img class='icon-img' src="../assets/mongodb.png" alt="mongodb"></li>
+        <li><img class='icon-img' src="../assets/express.jpg" alt="express"></li>
+        <li><img class='icon-img' src="../assets/nodejs.png" alt="nodejs"></li>
+        <li><img class='icon-img' src="../assets/facebook.png" alt="facebook"></li>
       </ul>
     </div>
-
-
-    <div class='col-12 p-bottom'>
-      <div class='icon-container'>
-        <ul class="icon-list d-flex flex-row">
-          <li><img class='icon-img' src="../assets/mongodb.png" alt="mongodb"></li>
-          <li><img class='icon-img' src="../assets/express.jpg" alt="express"></li>
-          <li><img class='icon-img' src="../assets/nodejs.png" alt="nodejs"></li>
-          <li><img class='icon-img' src="../assets/facebook.png" alt="facebook"></li>
-        </ul>
-      </div>
-      <div class='description-container'>
-        <p class='mb-0'>
-          A sudoku puzzle is a 1 player board game where the numbers 1-9 must appear only once in any given column, row,
-          and 9x9 sqaure.
-          In my app, players can choose up to 4 levels of difficulty, which each give an appropriate amount of time to
-          finish the puzzle.
-          Once a player chooses a difficulty, the "start" button will become enabled, the the player can press start.
-          Once clicked, a
-          random puzzle will appear and the time will start. If the player pauses the game, the timer will stop and the
-          puzzle will
-          disappear, and a message will be provided. When the player resumes the game and the puzzle is once again
-          rendered,
-          the player can click on an empty square to select it, and then choose any of the numbers from the bottom of
-          the screen.
-          If the number picked is correct, the number will be added and the square will be become disabled. If the
-          number is wrong, the
-          number will appear in red and all other squares will become disabled. Once the player clicks the undo button,
-          the red number
-          will disappear and a mistake will be added to your tally of mistakes. You're allowed 3! If a player is stuck,
-          they can choose
-          to select the hint button.
-        </p>
-      </div>
-
+    <div class='description-container'>
+      <p class='mb-0'>
+        A sudoku puzzle is a 1 player board game where the numbers 1-9 must appear only once in any given column, row,
+        and 9x9 sqaure.
+        In my app, players can choose up to 4 levels of difficulty, which each give an appropriate amount of time to
+        finish the puzzle.
+        Once a player chooses a difficulty, the "start" button will become enabled, the the player can press start.
+        Once clicked, a
+        random puzzle will appear and the time will start. If the player pauses the game, the timer will stop and the
+        puzzle will
+        disappear, and a message will be provided. When the player resumes the game and the puzzle is once again
+        rendered,
+        the player can click on an empty square to select it, and then choose any of the numbers from the bottom of
+        the screen.
+        If the number picked is correct, the number will be added and the square will be become disabled. If the
+        number is wrong, the
+        number will appear in red and all other squares will become disabled. Once the player clicks the undo button,
+        the red number
+        will disappear and a mistake will be added to your tally of mistakes. You're allowed 3! If a player is stuck,
+        they can choose
+        to select the hint button.
+      </p>
     </div>
 
   </div>
+
+  <!-- </div> -->
 
   <!-- <button class='p-btn'><a href="">link to code</a></button> -->
 
