--- a/projects/tb.html
+++ b/projects/tb.html
@@ -12,10 +12,15 @@
   <script src='https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js'></script>
   <script src="https://use.fontawesome.com/d6edd70b37.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-  <title>Let's Chat</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+  <title>Travel Book</title>
 </head>
 
-<body>
+<body class='test'>
   <div class="d-flex flex-row p-header">
     <div class="logo-div">
       <a href="../index.html"><img class='p-logo' src="../assets/logo.JPG" alt="logo"></a>
@@ -23,17 +28,46 @@
     <h1 class='p-name'>Travel Book</h1>
   </div>
 
-  <div class='row p-container '>
-    <div class='col-12 p-top'>
-      <ul class='slideshow tb'>
-        <li></li>
-        <li></li>
-        <li></li>
-      </ul>
+
+  <div class="container row" id='tb-row'>
+
+    <div id="myCarouseltb" class="carousel slide col-xs-12" data-ride="carousel">
+      <!-- Indicators -->
+      <ol class="carousel-indicators">
+        <li data-target="#myCarouseltb" data-slide-to="0" class="active"></li>
+        <li data-target="#myCarouseltb" data-slide-to="1"></li>
+        <li data-target="#myCarouseltb" data-slide-to="2"></li>
+      </ol>
+
+      <!-- Wrapper for slides -->
+      <div class="carousel-inner">
+        <div class="item active">
+          <img src="../assets/tb.png" alt="Los Angeles" style="width:100%;">
+        </div>
+
+        <div class="item">
+          <img src="../assets/tb_2.png" alt="Chicago" style="width:100%;">
+        </div>
+
+        <div class="item">
+          <img src="../assets/tb_3.png" alt="New york" style="width:100%;">
+        </div>
+        <div class="item">
+          <img src="../assets/tb_4.png" alt="New york" style="width:100%;">
+        </div>
+      </div>
+
+      <!-- Left and right controls -->
+      <a class="left carousel-control" href="#myCarouseltb" data-slide="prev">
+        <span class="glyphicon glyphicon-chevron-left"></span>
+        <span class="sr-only">Previous</span>
+      </a>
+      <a class="right carousel-control" href="#myCarouseltb" data-slide="next">
+        <span class="glyphicon glyphicon-chevron-right"></span>
+        <span class="sr-only">Next</span>
+      </a>
     </div>
-
-
-    <div class='col-12 p-bottom'>
+    <div class='col-xs-12 p-bottom' id='bottom'>
       <div class='icon-container'>
         <ul class="icon-list d-flex flex-row">
           <li><img class='icon-img' src="../assets/mongodb.png" alt="mongodb"></li>
@@ -43,22 +77,21 @@
         </ul>
       </div>
       <div class='description-container'>
-        <p class='mb-0'>
-          Lorem Ipsum is simply dummy text of the printing and
-          typesetting industry. Lorem Ipsum has been the industry's
-          standard dummy text ever since the 1500s, when an unknown
-          printer took a galley of type and scrambled it to make a
-          type specimen book. It has survived not only five centuries,
-          but also the leap into electronic typesetting, remaining
-          essentially unchanged.
-        </p>
+        <p class='mb-0'> With Travel Book, users can easily keep track of the places they have visted, the photos they
+          have taken, and
+          even the
+          miles they have travled. With the help of Google Maps and Places, and implementing MongoDB, Express, React
+          Native, and Node,
+          users can not only check-in to their current location with just the touch of a button, but also add photos.
+          And since everything
+          for that cool trip you went on is in one place, it's easier to brag to your friends.</p>
+
       </div>
 
     </div>
-
   </div>
 
-  <!-- <button class='p-btn'><a href="">link to code</a></button> -->
+
 
 
 
