added background photo

--- a/index.html
+++ b/index.html
@@ -97,24 +97,26 @@
                   <li data-target="#tbCarousel" data-slide-to="0" class="active"></li>
                   <li data-target="#tbCarousel" data-slide-to="1"></li>
                   <li data-target="#tbCarousel" data-slide-to="2"></li>
+                  <li data-target="#tbCarousel" data-slide-to="3"></li>
+                  <li data-target="#tbCarousel" data-slide-to="4"></li>
                 </ol>
 
                 <!-- Wrapper for slides -->
                 <div class="carousel-inner">
                   <div class="item active">
-                    <img src="assets/tb_6.png" alt="Los Angeles" style="width:100%;">
+                    <img src="assets/tb_6.png" alt="tb_6" style="width:100%;">
                   </div>
                   <div class="item">
-                    <img src="assets/tb.png" alt="Chicago" style="width:100%;">
+                    <img src="assets/tb.png" alt="tb" style="width:100%;">
                   </div>
                   <div class="item">
-                    <img src="assets/tb_2.png" alt="Chicago" style="width:100%;">
+                    <img src="assets/tb_2.png" alt="tb_2" style="width:100%;">
                   </div>
                   <div class="item">
-                    <img src="assets/tb_3.png" alt="New york" style="width:100%;">
+                    <img src="assets/tb_3.png" alt="tb_3" style="width:100%;">
                   </div>
                   <div class="item">
-                    <img src="assets/tb_4.png" alt="New york" style="width:100%;">
+                    <img src="assets/tb_4.png" alt="tb_4" style="width:100%;">
                   </div>
 
                 </div>
@@ -176,24 +178,26 @@
                   <li data-target="#voteCarousel" data-slide-to="0" class="active"></li>
                   <li data-target="#voteCarousel" data-slide-to="1"></li>
                   <li data-target="#voteCarousel" data-slide-to="2"></li>
+                  <li data-target="#voteCarousel" data-slide-to="3"></li>
+                  <li data-target="#voteCarousel" data-slide-to="4"></li>
                 </ol>
 
                 <!-- Wrapper for slides -->
                 <div class="carousel-inner">
                   <div class="item active">
-                    <img src="assets/vote.png" alt="Los Angeles" style="width:100%;">
+                    <img src="assets/vote.png" alt="vote" style="width:100%;">
                   </div>
                   <div class="item">
-                    <img src="assets/vote_2.png" alt="Chicago" style="width:100%;">
+                    <img src="assets/vote_2.png" alt="vote_2" style="width:100%;">
                   </div>
                   <div class="item">
-                    <img src="assets/vote_4.png" alt="New york" style="width:100%;">
+                    <img src="assets/vote_4.png" alt="vote_4" style="width:100%;">
                   </div>
                   <div class="item">
-                    <img src="assets/vote_5.png" alt="New york" style="width:100%;">
+                    <img src="assets/vote_5.png" alt="vote_5" style="width:100%;">
                   </div>
                   <div class="item">
-                    <img src="assets/vote_6.png" alt="New york" style="width:100%;">
+                    <img src="assets/vote_6.png" alt="vote_6" style="width:100%;">
                   </div>
                 </div>
 
@@ -241,14 +245,6 @@
           <div class='card project-card'>
             <h1 class='card-title'>Sudoku</h1>
             <div class='img-container'>
-              <!-- <a href="projects/sudoku.html">
-
-                <img class='card-img-top' id='p1-img' src="assets/sudoku.png" alt="sudoku">
-              </a>
-              </div>  -->
-
-
-
               <div id="sudokuCarousel" class="carousel slide" data-ride="carousel">
                 <!-- Indicators -->
                 <ol class="carousel-indicators">
@@ -260,13 +256,13 @@
                 <!-- Wrapper for slides -->
                 <div class="carousel-inner">
                   <div class="item active">
-                    <img class='p-pic' src="assets/sudoku.png" alt="Los Angeles" style="width:100%;">
+                    <img class='p-pic' src="assets/sudoku.png" alt="sudoku" style="width:100%;">
                   </div>
                   <div class="item">
-                    <img src="assets/sudoku_2.png" alt="Chicago" style="width:100%;">
+                    <img src="assets/sudoku_2.png" alt="sudoku_2" style="width:100%;">
                   </div>
                   <div class="item">
-                    <img src="assets/sudoku_3.png" alt="New york" style="width:100%;">
+                    <img src="assets/sudoku_3.png" alt="sudoku_3" style="width:100%;">
                   </div>
 
                 </div>
@@ -301,38 +297,34 @@
           <div class='card project-card'>
             <h1 class='card-title'>Let's Chat</h1>
             <div class='img-container'>
-              <!-- <a href="projects/chat.html">
-
-                <img class='card-img-top' id='p2-img' src="assets/chat.png" alt="lets-chat">
-              </a>
-            </div> -->
-
               <div id="chatCarousel" class="carousel slide" data-ride="carousel">
                 <!-- Indicators -->
                 <ol class="carousel-indicators">
                   <li data-target="#chatCarousel" data-slide-to="0" class="active"></li>
                   <li data-target="#chatCarousel" data-slide-to="1"></li>
                   <li data-target="#chatCarousel" data-slide-to="2"></li>
+                  <li data-target="#chatCarousel" data-slide-to="3"></li>
+                  <li data-target="#chatCarousel" data-slide-to="4"></li>
                 </ol>
 
                 <!-- Wrapper for slides -->
                 <div class="carousel-inner">
                   <div class="item active">
-                    <img src="assets/chat.png" alt="Los Angeles" style="width:100%;">
+                    <img src="assets/chat.png" alt="chat" style="width:100%;">
                   </div>
 
                   <div class="item">
-                    <img src="assets/chat_2.png" alt="Chicago" style="width:100%;">
+                    <img src="assets/chat_2.png" alt="chat_2" style="width:100%;">
                   </div>
 
                   <div class="item">
-                    <img src="assets/chat_3.png" alt="New york" style="width:100%;">
+                    <img src="assets/chat_3.png" alt="chat_3" style="width:100%;">
                   </div>
                   <div class="item">
-                    <img src="assets/chat_4.png" alt="New york" style="width:100%;">
+                    <img src="assets/chat_4.png" alt="chat_4" style="width:100%;">
                   </div>
                   <div class="item">
-                    <img src="assets/chat_5.png" alt="New york" style="width:100%;">
+                    <img src="assets/chat_5.png" alt="chat_5" style="width:100%;">
                   </div>
                 </div>
 
