--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 <body>
 
   <!-- //////////////////////////HEADER////////////////////////////// -->
-  <nav class='headerDiv header-show'>
+  <!-- <nav class='headerDiv header-show'>
     <a class='logo'><img class='logo-img' src="assets/logo.JPG" alt="logo"></a>
     <button onclick="toggleMenu()" class='toggle'>
       <i class="fas fa-bars" aria-hidden="true"></i>
@@ -53,7 +53,29 @@
       <li onclick="toggleMenu()" class='item nav-item'><a class='scroll' href='#about'>About Me</a></li>
       <li onclick="toggleMenu()" class='item nav-item'><a class='scroll' href='#contact-row'>Contact</a></li>
     </ul>
+  </nav> -->
+
+  <nav id='navbar'>
+    <div class='logo'>
+      <a href="#"><img src="assets/logo.JPG" alt="logo"></a>
+    </div>
+    <ul class='nav-links'>
+      <li><a class='scroll' href="#home">Home</a></li>
+      <li><a class='scroll' href="#portfolio">Projects</a></li>
+      <li><a class='scroll' href="#skills-section">Skills</a></li>
+      <li><a class='scroll' href="#edu-section">Education</a></li>
+      <li><a class='scroll' href="#about">About Me</a></li>
+      <li><a class='scroll' href="#contact">Contact</a></li>
+    </ul>
+    <div class="burger">
+      <div class="line1"></div>
+      <div class="line2"></div>
+      <div class="line3"></div>
+    </div>
   </nav>
+
+
+
   <!-- ///////////////////////////////////////////////////////////////////// -->
 
 
