padding on navlinks

--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
                   <li data-target="#voteCarousel" data-slide-to="1"></li>
                   <li data-target="#voteCarousel" data-slide-to="2"></li>
                   <li data-target="#voteCarousel" data-slide-to="3"></li>
-                  <li data-target="#voteCarousel" data-slide-to="4"></li>
+                  <!-- <li data-target="#voteCarousel" data-slide-to="4"></li> -->
                 </ol>
 
                 <!-- Wrapper for slides -->
@@ -218,9 +218,9 @@
                   <div class="item">
                     <img src="assets/vote_5.png" alt="vote_5" style="width:100%;">
                   </div>
-                  <div class="item">
-                    <img src="assets/vote_6.png" alt="vote_6" style="width:100%;">
-                  </div>
+                  <!-- <div class="item">
+                    <img src="assets/vote_3.png" alt="vote_6" style="width:100%;">
+                  </div> -->
                 </div>
 
                 <!-- Left and right controls -->
