logo fixed on btm right

--- a/index.html
+++ b/index.html
@@ -55,10 +55,9 @@
     </ul>
   </nav> -->
 
+
+
   <nav id='navbar'>
-    <div class='logo'>
-      <a href="#"><img src="assets/logo.JPG" alt="logo"></a>
-    </div>
     <ul class='nav-links'>
       <li><a class='scroll' href="#home">Home</a></li>
       <li><a class='scroll' href="#portfolio">Projects</a></li>
@@ -74,6 +73,10 @@
     </div>
   </nav>
 
+  <div class="logo">
+
+    <a class='scroll' href="#home"><img src="assets/logo.JPG" alt="logo"></a>
+  </div>
 
 
   <!-- ///////////////////////////////////////////////////////////////////// -->
