--- a/index.html
+++ b/index.html
@@ -72,12 +72,12 @@
   <div class='body'>
     <section id='home' class='row'>
       <div id='home-img' class='sm-col-12 col-md-4 col-lg-3'>
-        <img id='headshot' src="assets/headshot_3.JPG" alt="headshot">
+        <img id='headshot' src="assets/headshot.png" alt="headshot">
       </div>
       <div class='sm-col-12 col-md-8 col-lg-9 home-text'>
         <ul class='home-about'>
           <li>
-            My name is Evan Doherty
+            My name is Evan Doherty.
           </li>
           <li>
             I'm a full-stack software engineer with a degree in mathematics and a
