--- a/index.html
+++ b/index.html
@@ -144,17 +144,18 @@
               <div class='card-body'>
 
                 <!-- <p class='card-text'>iOS app for logging every detail of your trip.</p> -->
-                <p class='card-text'>With Travel Book, users can easily keep track of the places they have visted, the
+                <p class='card-text'>With Travel Book, users can easily keep track of the places they have visited, the
                   photos they
                   have taken, and
                   even the
-                  miles they have travled. With the help of Google Maps and Places, and implementing MongoDB, Express,
+                  miles they have traveled. With the help of Google Maps and Places, and implementing MongoDB, Express,
                   React
-                  Native, and Node,
-                  users can not only check-in to their current location with just the touch of a button, but also add
+                  Native and Node,
+                  users can not only check-in to their current location with just the touch of a button, but can also
+                  add
                   photos.
                   And since everything
-                  for that cool trip you went on is in one place, it's easier to brag to your friends.</p>
+                  for that cool trip you went on is in one place, it's easier to share with your friends.</p>
                 <div class='d-flex flex-row flex-wrap tags'>
                   <button>MongoDB</button>
                   <button class='express'>Express</button>
@@ -230,7 +231,7 @@
                   playlists,
                   all curated and managed by the community. Carefully creating a Spotify API endpoint, I implemented a
                   search
-                  bar,
+                  bar
                   where a user can search and 'suggest' a song. It is then sent into a queue where it has two weeks to
                   earn
                   enough votes to be
@@ -289,7 +290,8 @@
               </div>
               <div class='card-body'>
 
-                <p class='card-text'>Classic sudoku with up to 4 difficulties and multiple functionalities such as
+                <p class='card-text'>Classic sudoku with up to 4 difficulties as well as multiple functionalities such
+                  as
                   hints, undo, and pause.</p>
 
                 <div class='d-flex flex-row tags'>
@@ -355,7 +357,8 @@
                   Our main
                   channel was
                   populated with useful
-                  information, but since it was so active, finding the information you needed became difficult, even
+                  information, but due to higher levels of activity, finding the information you needed became
+                  difficult, even
                   with
                   Slack's search feature.
                   Let's Chat was created to alleviate this issue by requiring users to select a tag relevant to the
@@ -525,7 +528,7 @@
 
             <img class='am-pic' src="assets/me.JPG" alt="">
           </div> -->
-          <div class='am-text'>Growing up, I played lacrosse, wrestled and surfed, as any good Long Island native would.
+          <div class='am-text'>Growing up I played lacrosse, wrestled and surfed, as any good Long Island native would.
             I
             am the youngest of a pack
             of 3, so I am resilient and have tough skin. I eat at all hours of the day and night (I will literally wake
@@ -541,7 +544,7 @@
           <div class='am-text'>After graduating from UNCW, I knew I had a passion for mathematics and problem-solving
             but didn't know
             how I wanted to
-            apply it in my professional life. So, I spent a year in Nicaragua, reigniting my passion for surfing and
+            apply it in my professional career. So, I spent a year in Nicaragua, reigniting my passion for surfing and
             teaching.
             Once I returned, I considered getting my teaching degree or going into business with my father,
             a renowned chef, but was soon introduced to coding. I immediately realized my calling.
