about me section edited

--- a/index.html
+++ b/index.html
@@ -523,25 +523,31 @@
         About Me
       </h1>
       <div class='col-12 fade-in about-container'>
-        <div class='am am-2'>
-          <!-- <div class='am-pic-div'>
+        <div id='am-1' class='am row'>
+          <hr id='solid'>
+          <div class='am-pic-div col-xs-12 col-lg-6'>
 
             <img class='am-pic' src="assets/me.JPG" alt="">
-          </div> -->
-          <div class='am-text'>Growing up I played lacrosse, wrestled and surfed, as any good Long Island native would.
+            <!-- <img class='am-pic' src="assets/fam.JPG" alt=""> -->
+          </div>
+          <div class='am-pic-div col-xs-12 col-lg-6'>
+
+            <img class='am-pic' src="assets/nica_5.JPG" alt="">
+            <!-- <img class='am-pic' src="assets/nica_5.JPG" alt=""> -->
+          </div>
+        </div>
+        <div id='am-2' class='am row'>
+          <div class='am-text col-xs-12'>Growing up I played lacrosse, wrestled and surfed, as any good Long
+            Island native
+            would.
             I
             am the youngest of a pack
             of 3, so I am resilient and have tough skin. I eat at all hours of the day and night (I will literally wake
             up at 6 AM for a snack and go back to sleep).
             I work hard, play hard, but most of all, I code hard.
           </div>
-        </div>
-        <div class='am am-1'>
-          <!-- <div class='am-pic-div'>
-
-            <img class='am-pic' src="assets/me.JPG" alt="">
-          </div> -->
-          <div class='am-text'>After graduating from UNCW, I knew I had a passion for mathematics and problem-solving
+          <div class='am-text col-xs-12'>After graduating from UNCW, I knew I had a passion for mathematics and
+            problem-solving
             but didn't know
             how I wanted to
             apply it in my professional career. So, I spent a year in Nicaragua, reigniting my passion for surfing and
