--- a/index.html
+++ b/index.html
@@ -100,7 +100,6 @@
           <div class='card project-card'>
             <h1 class='card-title'>Travel Book</h1>
             <div class='img-container'>
-
               <div id="tbCarousel" class="carousel slide" data-ride="carousel">
                 <!-- Indicators -->
                 <ol class="carousel-indicators">
@@ -156,9 +155,9 @@
                   photos.
                   And since everything
                   for that cool trip you went on is in one place, it's easier to share with your friends.</p>
-                <div class='d-flex flex-row flex-wrap tags'>
+                <div class='tags d-flex flex-row flex-wrap'>
                   <button>MongoDB</button>
-                  <button class='express'>Express</button>
+                  <button>Express</button>
                   <button>React-Native</button>
                   <button>Node.JS</button>
                   <button>Expo</button>
@@ -167,6 +166,10 @@
                   <button>Google Maps</button>
                 </div>
               </div>
+            </div>
+            <div>
+              <a class='code-link' target="_blank" href='https://github.com/edoherty77/travel-book-api'>Check Out The
+                Code</a>
             </div>
           </div>
         </div>
@@ -177,12 +180,6 @@
           <div class='card project-card'>
             <h1 class='card-title'>Vote-ify</h1>
             <div class='img-container'>
-              <!-- <a href="projects/vote.html">
-                <img class='card-img-top' id='p3-img' src="assets/vote.png" alt="vote-ify">
-
-              </a>
-            </div> -->
-
               <div id="voteCarousel" class="carousel slide" data-ride="carousel">
                 <!-- Indicators -->
                 <ol class="carousel-indicators">
@@ -190,7 +187,6 @@
                   <li data-target="#voteCarousel" data-slide-to="1"></li>
                   <li data-target="#voteCarousel" data-slide-to="2"></li>
                   <li data-target="#voteCarousel" data-slide-to="3"></li>
-                  <!-- <li data-target="#voteCarousel" data-slide-to="4"></li> -->
                 </ol>
 
                 <!-- Wrapper for slides -->
@@ -207,9 +203,6 @@
                   <div class="item">
                     <img src="assets/vote_5.png" alt="vote_5" style="width:100%;">
                   </div>
-                  <!-- <div class="item">
-                    <img src="assets/vote_3.png" alt="vote_6" style="width:100%;">
-                  </div> -->
                 </div>
 
                 <!-- Left and right controls -->
@@ -245,6 +238,10 @@
                   <button>Spotify Authentication</button>
                 </div>
               </div>
+            </div>
+            <div>
+              <a class='code-link' target="_blank" href='https://github.com/sjaugmented/project3-client'>Check Out The
+                Code</a>
             </div>
           </div>
         </div>
@@ -301,6 +298,10 @@
                   <button>Bootstrap</button>
                 </div>
               </div>
+            </div>
+            <div>
+              <a class='code-link' target="_blank" href='https://github.com/edoherty77/GA-Project-1-Game-App'>Check Out
+                The Code</a>
             </div>
           </div>
         </div>
@@ -374,6 +375,10 @@
                   <button>Facebook Authentication</button>
                 </div>
               </div>
+            </div>
+            <div>
+              <a class='code-link' target="_blank"
+                href='https://github.com/lowgravity1203/lets-chat/tree/submaster'>Check Out The Code</a>
             </div>
           </div>
         </div>
