--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
       <li><a class='scroll' href="#skills-section">Skills</a></li>
       <li><a class='scroll' href="#edu-section">Education</a></li>
       <li><a class='scroll' href="#about">About Me</a></li>
-      <li><a class='scroll' href="#contact">Contact</a></li>
+      <li><a class='scroll' href="#contact-row">Contact</a></li>
     </ul>
     <div class="burger">
       <div class="line1"></div>
@@ -59,8 +59,8 @@
     </div>
   </nav>
 
-  <div class="logo">
-    <a class='scroll' href="#home"><img src="assets/logo.JPG" alt="logo"></a>
+  <div id='scrolldiv'>
+    <a class='scroll' href="#contact-row"><i id='email' class="fas fa-envelope"></i></a>
   </div>
 
 
