padding and margin in project sections

--- a/index.html
+++ b/index.html
@@ -91,9 +91,10 @@
     <!-- ////////////////////////////////PROJECTS////////////////////////////////// -->
     <section class='row' id='portfolio'>
       <h1 class='col-12 fade-in section-header '>
-        Projects
+        What I've Done
       </h1>
       <div class='row projects'>
+
 
 
         <div class='col-xs-12 col-sm-12 card-container fade-in col-md-12 col-lg-12 mb-3'>
@@ -394,7 +395,7 @@
     <!-- ////////////////////////////////SKILLS////////////////////////////////// -->
     <section class='row' id='skills-section'>
       <h1 class='col-12 fade-in section-header'>
-        Skills
+        What I Know
       </h1>
 
       <div class='row skills' id='skills-row'>
@@ -475,7 +476,7 @@
     <!-- ////////////////////////////////EDUCATION////////////////////////////////// -->
     <section class='row' id='edu-section'>
       <h1 class='col-12 fade-in section-header'>
-        Education
+        Where I Attended
       </h1>
       <div class='row edu-row'>
 
@@ -525,11 +526,11 @@
     <!-- ////////////////////////////////ABOUT ME////////////////////////////////// -->
     <section class='row' id='about'>
       <h1 class='col-12 fade-in section-header'>
-        About Me
+        Who I Am
       </h1>
       <div class='col-12 fade-in about-container'>
         <div id='am-1' class='am row'>
-          <hr id='solid'>
+          <hr class='solid'>
           <div class='am-pic-div col-xs-12 col-lg-6'>
 
             <img class='am-pic' src="assets/me.JPG" alt="">
