--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
           <li>
             My name is Evan Doherty.
           </li>
-          <br>
+
           <li>
             I'm a full-stack software engineer with a degree in mathematics and a
             passion for music and surfing.
@@ -477,7 +477,7 @@
     <!-- ////////////////////////////////EDUCATION////////////////////////////////// -->
     <section class='row' id='edu-section'>
       <h1 class='col-12 fade-in section-header'>
-        Where I Attended
+        Where I Studied
       </h1>
       <div class='row edu-row'>
 
@@ -579,7 +579,7 @@
 
     <footer class='row' id='contact-row'>
       <h1 class='col-12 fade-in contact section-header'>
-        Contact
+        Contact Me
       </h1>
 
       <div class='info-div fade-in col-sm-12 col-md-6'>
