project border edits

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
             My name is Evan Doherty.
           </li>
           <li>
-            I'm a full-stack software engineer with a degree in mathematics and a
+            I am a full-stack software engineer with a degree in mathematics and a
             passion for music and surfing.
           </li>
         </ul>
@@ -168,7 +168,7 @@
                 </div>
               </div>
             </div>
-            <div>
+            <div class='code-link-div'>
               <a class='code-link' target="_blank" href='https://github.com/edoherty77/travel-book-api'>Check Out The
                 Code</a>
             </div>
@@ -240,7 +240,7 @@
                 </div>
               </div>
             </div>
-            <div>
+            <div class='code-link-div'>
               <a class='code-link' target="_blank" href='https://github.com/sjaugmented/project3-client'>Check Out The
                 Code</a>
             </div>
@@ -300,7 +300,7 @@
                 </div>
               </div>
             </div>
-            <div>
+            <div class='code-link-div'>
               <a class='code-link' target="_blank" href='https://github.com/edoherty77/GA-Project-1-Game-App'>Check Out
                 The Code</a>
             </div>
@@ -377,7 +377,7 @@
                 </div>
               </div>
             </div>
-            <div>
+            <div id='chat-card' class='code-link-div'>
               <a class='code-link' target="_blank"
                 href='https://github.com/lowgravity1203/lets-chat/tree/submaster'>Check Out The Code</a>
             </div>
