ios testing education section

--- a/index.html
+++ b/index.html
@@ -492,7 +492,8 @@
             </div>
 
             <div class='d-flex flex-column edu-info'>
-              <div>Software Engineering Immersive Program - Full-Stack</div>
+              <div>Software Engineering Immersive Program</div>
+              <div>Full-Stack</div>
               <div><i class="fas fa-map-pin"></i> Remote</div>
             </div>
           </div>
