contact seciton ios test

--- a/index.html
+++ b/index.html
@@ -594,7 +594,7 @@
 
 
 
-      <div class='contact-div col-sm-12 col-md-6 fade-in d-flex flex-column'>
+      <div id='contact-id' class='contact-div col-sm-12 col-md-6 fade-in d-flex flex-column'>
         <form id="contact-form">
           <input type="hidden" name="contact_number"> <br>
           <!-- <label>Name</label> -->
