--- a/index.html
+++ b/index.html
@@ -71,20 +71,30 @@
 
   <div class='body'>
     <section id='home' class='row'>
-      <div id='home-img' class='sm-col-12 col-md-4 col-lg-3'>
-        <img id='headshot' src="assets/headshot.png" alt="headshot">
+      <div id='home-div'>
+        <!-- <div> -->
+        <h1 id='name'>Evan Doherty</h1>
+        <p id='intro-p'>I am a full-stack software engineer with a degree in mathematics and a
+          passion for music and surfing.</p>
+        <button id='intro-btn'>Check out my stuff</button>
+        <!-- </div> -->
       </div>
-      <div class='sm-col-12 col-md-8 col-lg-9 home-text'>
-        <ul class='home-about'>
-          <li>
-            My name is Evan Doherty.
-          </li>
-          <li>
-            I am a full-stack software engineer with a degree in mathematics and a
-            passion for music and surfing.
-          </li>
-        </ul>
-      </div>
+      <!-- <div id='home-div'>
+        <div id='home-img' class='sm-col-12 col-md-4 col-lg-3'>
+          <img id='headshot' src="assets/headshot.png" alt="headshot">
+        </div>
+        <div class='sm-col-12 col-md-8 col-lg-9 home-text'>
+          <ul class='home-about'>
+            <li>
+              My name is Evan Doherty.
+            </li>
+            <li>
+              I am a full-stack software engineer with a degree in mathematics and a
+              passion for music and surfing.
+            </li>
+          </ul>
+        </div>
+      </div> -->
     </section>
     <!-- ///////////////////////////////////////////////////////////////////// -->
 
