--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
                   officially added to the playlist.</p>
                 <div class='d-flex flex-row flex-wrap tags'>
                   <button>MongoDB</button>
-                  <button class='express'>Express</button>
+                  <button>Express</button>
                   <button>ReactJS</button>
                   <button>Node.JS</button>
                   <button>Ant Design</button>
