--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         <h1 id='name'>Evan Doherty</h1>
         <p id='intro-p'>I am a full-stack software engineer with a degree in mathematics and a
           passion for music and surfing.</p>
-        <button id='intro-btn'>Check out my stuff</button>
+        <button id='intro-btn'>Check out my work</button>
         <!-- </div> -->
       </div>
       <!-- <div id='home-div'>
